kubernetes-examples/kubernetes-monitoring/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  selector:
    app: prometheus-server
  #type: NodePort
  ports:
    - port: 8080
      targetPort: 9090
